--- a/TODO.txt
+++ b/TODO.txt
@@ -13,28 +13,33 @@ TODAY:
 			shoot a bullet out [X] 
 			shoot multiple bullets [X] 
 
-			enemy get hit by the bullet (with animation, die, blood,..)	[] @Current 
+			enemy get hit by the bullet (with animation, die, blood,..)	[] 
 				-> the bullet should be in level data and the enemies should check that on its own and change state 
 				-> have enemy die sprite sheet []
 
 		let's clean the animation state machine code (2h) [X] 
 			-> refactor the transition code so that it way more comfortable to use (4h) [X] 
 
-	Idea: should all the input handling in the player.cpp file and then transfered to other files @Next 
+	@Current: Finish all of the Ideas first, the following one first  
+	Idea: HOW ABOUT HAVING A GLOBAL GAME DATA THAT CONTAINS ALL RESOURCES (BULLETS, ENEMIES,...) so that it can be call to release at any where in the game (2h) []
+		-> GLOBAL SINGLETON ()
+		-> the singleton updates is going to be constantly running in the game mainloop
+		-> to check for events such as enemy killed (with index), bullets hit/remove, load new assets,..., 
+		-> or just have api that do all of these things and get called inside the entities objects ?
+
+	Idea: should all the input handling in the player.cpp file and then transfered to other files 
 		so that we don't often miss understand between the throwing bomb input in the playerAnimation 
 		-> THERE ARE TOO MANY PLACES THAT HANDLES INPUT -> Player.cpp should be the only player file that handle input 
 
 	Idea: THERE ARE CERTAIN OBSCURITY WHEN USING COMMONTRANSITION METHOD (should have better name or just expand them all out) ?? 
+
+	ONLY LOAD THE GAME ASSETS ONCE AT THE START OF THE LEVEL (2h) []
 
 	FIXME: LET THE THROWING ANIMATION FINISH (1h) []
 		something wrong with the throwing animation when trying to make it complete the animation
 		-> there are some dependencies and obscurity going on in here 
 
 TODO:  
-	Idea: HOW ABOUT HAVING A GLOBAL GAME DATA THAT CONTAINS ALL RESOURCES (BULLETS, ENEMIES,...) so that it can be call to release at any where in the game (2h) []
-
-	ONLY LOAD THE GAME ASSETS ONCE AT THE START OF THE LEVEL (2h) []
-
 	HAVE DEBUG INFO ON SCREEN THAT SPECIFIES HOW MANY ENTITIES OF EACH TYPE ARE THERE (to check whether they're freed or not) (2h) []
 
 	ENEMY THROWING GRENADE (with animation) (2h) [] 
