--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,4 @@
 TODAY: 
-	HAVE A POOL FOR GAME ENTITY SUCH AS BULLETS, REBELS,... INSTEAD OF FREEING THEM (SINCE I CAN'T DO THAT :v) [] @Current 
-
-	HAVE DEBUG INFO ON SCREEN THAT SPECIFIES HOW MANY ENTITIES OF EACH TYPE ARE THERE (to check whether they're freed or not) (2h) []
-
 	PLAYER SHOOTING (4h) [] 
 		in all 3 directions (right, left, up) (2h) [] 
 			pts [X] 
@@ -19,16 +15,46 @@ TODAY:
 
 			enemy get hit by the bullet (with animation, die, blood,..)	[] 
 				-> the bullet should be in level data and the enemies should check that on its own and change state 
-				-> have enemy die sprite sheet []
+				-> have enemy die sprite sheet [] @Current 
 
 		let's clean the animation state machine code (2h) [X] 
 			-> refactor the transition code so that it way more comfortable to use (4h) [X] 
 
 	FIXME: LET THE THROWING ANIMATION FINISH (1h) []
 		something wrong with the throwing animation when trying to make it complete the animation
-		-> there are some dependencies and obscurity going on in here 
+	
+	ENEMY ANIMATIONS (2h) []
+		ANIMATION PTS [] 
+		ANIMATION Installation []
+	
+	PLACE ALL THE STUFF ON THE LEVEL (4h) [] 
+		have the camera working [X]
+			the camera will move with the player when the player go about 1/3 of the width 
+		have all the colliders in place as well [X] 
+			-> first figure out all the collider rects in PTS first [X]
+			-> then write it out in a datastructure then load into the map  [X]
+		place hostages into RIGHT places, with animation (2h) [X] 
+
+		place the sceneries into RIGHT place as well, with animation (4h) [] 
+			have the houses explode when it collide with player 
+			let's test with something that is the most visible and the easiest to implement  
+				-> The waterfall -> test out with PTS first  
+				-> add more collider blocks on the level [X]
+
+			NOW PLACE: 
+				THE OTHER HALF OF THE WATERFALL (1h) [X] 
+					0, 346, 832, 304
+					rect: 3320, 0, 832, 304
+				THE RIVER (1h) [] @Later
+				THE HOUSES (1h) [] @Later
+			INTO THE LEVEL 
+	-> there are some dependencies and obscurity going on in here 
 
 TODO:
+	HAVE A POOL FOR GAME ENTITY SUCH AS BULLETS, REBELS,... INSTEAD OF FREEING THEM (SINCE I CAN'T DO THAT :v) [] 
+
+	HAVE DEBUG INFO ON SCREEN THAT SPECIFIES HOW MANY ENTITIES OF EACH TYPE ARE THERE (to check whether they're freed or not) (2h) []
+
 	ENEMY THROWING GRENADE (with animation) (2h) [] 
 
 	HAVE A GENERAL STATE MACHINE CLASS THAT CAN BE REUSE (2h) [] 
@@ -72,32 +98,6 @@ TODO:
 
 
 	TAKE NEW WEAPON (2h) []
-
-	ENEMY ANIMATIONS (2h) []
-		ANIMATION PTS [] 
-		ANIMATION Installation []
-	
-	PLACE ALL THE STUFF ON THE LEVEL (4h) [] 
-		have the camera working [X]
-			the camera will move with the player when the player go about 1/3 of the width 
-		have all the colliders in place as well [X] 
-			-> first figure out all the collider rects in PTS first [X]
-			-> then write it out in a datastructure then load into the map  [X]
-		place hostages into RIGHT places, with animation (2h) [X] 
-
-		place the sceneries into RIGHT place as well, with animation (4h) [] 
-			have the houses explode when it collide with player 
-			let's test with something that is the most visible and the easiest to implement  
-				-> The waterfall -> test out with PTS first  
-				-> add more collider blocks on the level [X]
-
-			NOW PLACE: 
-				THE OTHER HALF OF THE WATERFALL (1h) [X] 
-					0, 346, 832, 304
-					rect: 3320, 0, 832, 304
-				THE RIVER (1h) [] @Later
-				THE HOUSES (1h) [] @Later
-			INTO THE LEVEL 
 
 	THE CAMERA THAT FOLLOWS THE PLAYER HAVE SOME TWEENING (2h) [] 
 		this is the link to the easing video: https://www.youtube.com/watch?v=zLh0K1PdUbc&ab_channel=CodingMath
