--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 TODAY: 
+	ENEMY GRENADE THROW (2h) [] @Current 
+
 	PLACE ALL THE STUFF ON THE LEVEL (10h) [] 
 		have the camera working [X]
 			the camera will move with the player when the player go about 1/3 of the width 
@@ -20,7 +22,7 @@ TODAY:
 				THE RIVER (1h) [X] 
 				THE HOUSES (1h) [] @Later
 				THE OBJECTS ON THE HOUSE (2h) [] @Later 
-				ENEMIES ON THE MAP (2h) [] @later 
+				ENEMIES ON THE MAP (2h) [] @later
 
 			INTO THE LEVEL 
 	-> there are some dependencies and obscurity going on in here 
@@ -41,7 +43,7 @@ TODAY:
 
 			enemy get hit by the bullet (with animation, die, blood,..)	[] 
 				-> the bullet should be in global game data and the enemies should check that on its own and change state [X]
-				-> have enemy die sprite sheet [] @Current
+				-> have enemy die sprite sheet [] 
 
 		let's clean the animation state machine code (2h) [X] 
 			-> refactor the transition code so that it way more comfortable to use (4h) [X] 
