--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 TODAY: 
 	ENEMY GRENADE THROW (2h) [] @Current 
+	Migrate to a new state machine system (2h) []
 
 	PLACE ALL THE STUFF ON THE LEVEL (10h) [] 
 		have the camera working [X]
