now the rebel soilder can (kinda) throw the grenade, but the grenade is still the type of grenade of player though, need to change that

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
 TODAY: 
 	ENEMY GRENADE THROW (2h) [] @Current 
+		-> attach an already have grenade to the rebelsoilder [X]
+		-> change the grenade texture 
+
 	Migrate to a new state machine system (2h) []
 
 	PLACE ALL THE STUFF ON THE LEVEL (10h) [] 
