--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
 TODAY: 
 	ENEMY GRENADE THROW (2h) [] 
 		-> attach an already have grenade to the rebelsoilder [X]
-		-> change the grenade texture to a rebel soilder grenade [] @Current 
+		-> change the grenade texture to a rebel soilder grenade [] 
+			-> grenade factory [X]
+			-> grenade sprite [] @Current 
 
 	Migrate RebelSoilder to a new state machine system (2h) [] @Next 
 
